ros_ws/log/build_2026-07-03_02-16-26/partea/stdout_stderr.log
running egg_info
creating ../../build/partea/partea.egg-info
writing ../../build/partea/partea.egg-info/PKG-INFO
writing dependency_links to ../../build/partea/partea.egg-info/dependency_links.txt
writing entry points to ../../build/partea/partea.egg-info/entry_points.txt
writing requirements to ../../build/partea/partea.egg-info/requires.txt
writing top-level names to ../../build/partea/partea.egg-info/top_level.txt
writing manifest file '../../build/partea/partea.egg-info/SOURCES.txt'
reading manifest file '../../build/partea/partea.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../build/partea/partea.egg-info/SOURCES.txt'
running build
running build_py
creating /home/abril/Documents/PrincipiosRobotica/Prueba/TP_final_robotica/ros_ws/build/partea/build
creating /home/abril/Documents/PrincipiosRobotica/Prueba/TP_final_robotica/ros_ws/build/partea/build/lib
creating /home/abril/Documents/PrincipiosRobotica/Prueba/TP_final_robotica/ros_ws/build/partea/build/lib/partea
copying partea/slam_node.py -> /home/abril/Documents/PrincipiosRobotica/Prueba/TP_final_robotica/ros_ws/build/partea/build/lib/partea
copying partea/__init__.py -> /home/abril/Documents/PrincipiosRobotica/Prueba/TP_final_robotica/ros_ws/build/partea/build/lib/partea
running install
running install_lib
creating /home/abril/Documents/PrincipiosRobotica/Prueba/TP_final_robotica/ros_ws/install/partea/lib/python3.10/site-packages/partea
copying /home/abril/Documents/PrincipiosRobotica/Prueba/TP_final_robotica/ros_ws/build/partea/build/lib/partea/slam_node.py -> /home/abril/Documents/PrincipiosRobotica/Prueba/TP_final_robotica/ros_ws/install/partea/lib/python3.10/site-packages/partea
copying /home/abril/Documents/PrincipiosRobotica/Prueba/TP_final_robotica/ros_ws/build/partea/build/lib/partea/__init__.py -> /home/abril/Documents/PrincipiosRobotica/Prueba/TP_final_robotica/ros_ws/install/partea/lib/python3.10/site-packages/partea
byte-compiling /home/abril/Documents/PrincipiosRobotica/Prueba/TP_final_robotica/ros_ws/install/partea/lib/python3.10/site-packages/partea/slam_node.py to slam_node.cpython-310.pyc
  File "/home/abril/Documents/PrincipiosRobotica/Prueba/TP_final_robotica/ros_ws/install/partea/lib/python3.10/site-packages/partea/slam_node.py", line 213
    ranges(ranges <= msg.range_min) = np.inf  # descartar tambien rangos invalidos por debajo del minimo
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to function call here. Maybe you meant '==' instead of '='?

byte-compiling /home/abril/Documents/PrincipiosRobotica/Prueba/TP_final_robotica/ros_ws/install/partea/lib/python3.10/site-packages/partea/__init__.py to __init__.cpython-310.pyc
running install_data
creating /home/abril/Documents/PrincipiosRobotica/Prueba/TP_final_robotica/ros_ws/install/partea/share/ament_index
creating /home/abril/Documents/PrincipiosRobotica/Prueba/TP_final_robotica/ros_ws/install/partea/share/ament_index/resource_index
creating /home/abril/Documents/PrincipiosRobotica/Prueba/TP_final_robotica/ros_ws/install/partea/share/ament_index/resource_index/packages
copying resource/partea -> /home/abril/Documents/PrincipiosRobotica/Prueba/TP_final_robotica/ros_ws/install/partea/share/ament_index/resource_index/packages
copying package.xml -> /home/abril/Documents/PrincipiosRobotica/Prueba/TP_final_robotica/ros_ws/install/partea/share/partea
running install_egg_info
Copying ../../build/partea/partea.egg-info to /home/abril/Documents/PrincipiosRobotica/Prueba/TP_final_robotica/ros_ws/install/partea/lib/python3.10/site-packages/partea-0.0.0-py3.10.egg-info
running install_scripts
Installing map_saver_node script to /home/abril/Documents/PrincipiosRobotica/Prueba/TP_final_robotica/ros_ws/install/partea/lib/partea
Installing slam_node script to /home/abril/Documents/PrincipiosRobotica/Prueba/TP_final_robotica/ros_ws/install/partea/lib/partea
writing list of installed files to '/home/abril/Documents/PrincipiosRobotica/Prueba/TP_final_robotica/ros_ws/build/partea/install.log'
